# geoseo-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  launch.md  setup-gsc.md
examples/: cursor-mcp.json
src/geoseo_mcp/: __init__.py  __main__.py  config.py  server.py
src/geoseo_mcp/audit/: __init__.py  llms_txt.py  on_page.py
src/geoseo_mcp/auth/: __init__.py  google.py
src/geoseo_mcp/engines/: __init__.py  anthropic.py  base.py  bing.py  gemini.py  gsc.py  indexnow.py  multi_llm.py  openai.py  perplexity.py  serpapi.py
src/geoseo_mcp/graph/: __init__.py  internal_links.py
src/geoseo_mcp/storage/: __init__.py  sqlite.py
src/geoseo_mcp/tools/: __init__.py  audit_tools.py  bing_tools.py  graph_tools.py  gsc_tools.py  indexing_tools.py  llm_tools.py  serpapi_tools.py  trend_tools.py
tests/: test_audit.py  test_internal_links.py  test_llms_txt.py  test_storage.py
